recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: not enough arguments for method treer: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
treer()
     ^